--- a/Back/src/StreamBox.API/Properties/launchSettings.json
+++ b/Back/src/StreamBox.API/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "ProEventos.API": {
+    "StreamBox.API": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
