--- a/Back/src/StreamBox.API/appsettings.json
+++ b/Back/src/StreamBox.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings":{
-    "Default": "Data Source=ProEventos.db"
+    "Default": "Data Source=StreamBox.db"
   },
   "Logging": {
     "LogLevel": {
